--- a/.env_example
+++ b/.env_example
@@ -15,8 +15,8 @@ DEFAULT_FROM_EMAIL=
 
 DOMAIN=
 
-DATABASE_NAME=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-DATABASE_PORT=
-DATABASE_HOST=
+DATABASE_NAME=postgres
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_PORT=5432
+DATABASE_HOST=localhost
