--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3.8'
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:3344
+    command: >
+      sh -c "mkdir -p /app/static /app/staticfiles && python manage.py collectstatic --noinput && python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:3344"
     volumes:
       - .:/app
     ports:
@@ -17,10 +18,6 @@ services:
 
   celery:
     build: .
-    command: version: '3.8'
-
-  celery:
-    build: .
     command: celery -A controler worker -l INFO
     volumes:
       - .:/app
@@ -28,23 +25,6 @@ services:
       - .env
     networks:
       - minha_rede
-
-volumes:
-  postgres_data:
-
-networks:
-  minha_rede:
-    external: true
-
-    volumes:
-      - .:/app
-    env_file:
-      - .env
-    networks:
-      - minha_rede
-
-volumes:
-  postgres_data:
 
 networks:
   minha_rede:
