--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-cryptography==41.0.7
 cryptography==42.0.8
-Django==4.2.9
-Django==5.0.7
 djangorestframework==3.15.2
 kombu==5.4.0
 python-decouple==3.8
 Requests==2.32.3
+Django==4.2.5
+celery==5.2.3
+psycopg==3.1.10
+psycopg2-binary==2.9.6
+redis==4.5.0
+
+
+
