--- a/.env_example
+++ b/.env_example
@@ -20,3 +20,6 @@ DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_PORT=5432
 DATABASE_HOST=localhost
+
+INSTANCE_NAME=Maxxx-dp1
+INSTANCE_TOKEN=xq2yrgebvounsyyrukq6
