--- a/.env_example
+++ b/.env_example
@@ -21,5 +21,5 @@ DATABASE_PASSWORD=postgres
 DATABASE_PORT=5432
 DATABASE_HOST=localhost
 
-INSTANCE_NAME=Maxxx-dp1
-INSTANCE_TOKEN=xq2yrgebvounsyyrukq6
+INSTANCE_NAME=
+INSTANCE_TOKEN=
