--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ python-decouple==3.8
 Requests==2.32.3
 Django==4.2.5
 celery==5.2.3
+celery-progress==0.4
 psycopg==3.1.10
 psycopg2-binary==2.9.6
 redis==4.5.0
